istio/http/k8s/deployment.v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-v1
  labels:
    app: http
spec:
  replicas: 2
  template:
    metadata:
      name: http
      labels:
        app: http
        version: v1
    spec:
      containers:
        - name: http
          image: registry.cn-zhangjiakou.aliyuncs.com/cheerego/http
          imagePullPolicy: Always
      restartPolicy: Always
      imagePullSecrets:
        - name: cheerego
  selector:
    matchLabels:
      app: http
