istio/http/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  selector:
    app: http
  ports:
    - port: 8080
